# chromeurl

./: .gitignore  PRIVACY.txt  README.org  background.js  hello.html  manifest.json  options.html  options.js  package-zip.sh  popup.html  popup.js  scrape.json
chrome/: background.js  manifest.json  options.html  popup.html
native/: install_host.sh  log-url.sh  pyproject.toml  setup.py
native/chromeurl/: install.py  main.py  version.py
