[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chromeurl"
version = "2025.12.22.0"
dependencies = [
  "ConfigArgParse"
]
requires-python = ">=3.7"
authors = [
  {name = "Ernesto Alfonso", email = "erjoalgo@gmail.com"},
]
maintainers = [
  {name = "Ernesto Alfonso", email = "erjoalgo@gmail.com"},
]
description = """
Native messaging host component of chrome current url extension. 
Exposes the current chrome browser url via a REST endpoint"""

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["chromium", "chrome", "url", "native"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/erjoalgo/chrome-current-url"
Documentation = "https://github.com/erjoalgo/chrome-current-url"
Repository = "https://github.com/erjoalgo/chrome-current-url"
"Bug Tracker" = "https://github.com/erjoalgo/chrome-current-url/issues"

[project.scripts]
chromeurl = "chromeurl.main:main"

[project.entry-points."chromeurl.main"]
chromeurl = "chromeurl.main:main"
